[package]
name = "flic"
version = "0.1.6"
authors = ["David Wang <millimillenary@gmail.com>"]
homepage = "https://github.com/wangds/libflic.git"
repository = "https://github.com/wangds/libflic.git"
documentation = "https://docs.rs/flic/"
description = "Autodesk Animator FLI and Autodesk Animator Pro FLC file encoder and decoder."
license = "MIT"
readme = "README.md"
keywords = ["decoder", "encoder"]
categories = ["multimedia::video"]

[lib]
name = "flic"
crate-type = ["rlib", "dylib"]
test = true
doctest = true
doc = true

[dependencies]
byteorder = "1.1"
libc = "0.2"
quick-error = "1.2"

[dev-dependencies]
sdl2 = "0.30"

[badges]
travis-ci = { repository = "wangds/libflic" }
